# cmakespace

./: README.md
work1/Demo1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
work1/Demo2/src/: CMakeLists.txt  main.cpp
work1/Demo3/src/: CMakeLists.txt  main.cpp
work1/Demo3/src/xcstring/: xc_string.h
work1/Demo4/src/: CMakeLists.txt  config.h  config.h.in
work1/Demo4/src/xcstring/: CMakeLists.txt  xc_string.cpp
work1/Demo5/: build.sh
work1/Demo5/src/: CMakeLists.txt  config.h  main.cpp
work1/Demo5/src/xcstring/: CMakeLists.txt
